--- a/week_2_rock_paper_scissors_project_rangers_81.ipynb
+++ b/week_2_rock_paper_scissors_project_rangers_81.ipynb
@@ -59,7 +59,11 @@
    "id": "ead53b1a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import chris_vincent_week_2_project \n",
+    "\n",
+    "rps()"
+   ]
   }
  ],
  "metadata": {
