--- a/week_2_rock_paper_scissors_project_rangers_81.ipynb
+++ b/week_2_rock_paper_scissors_project_rangers_81.ipynb
@@ -63,8 +63,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is your name? or 'exit': Vincentt\n",
-      "Welcome Vincentt to Rock, Paper, Scissors Python Edition\n",
+      "What is your name? or 'exit': Chris\n",
+      "Welcome Chris to Rock, Paper, Scissors Python Edition\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
       "Select one of the following: \n",
       "[Rules]\n",
       "[Play]\n",
@@ -76,33 +77,130 @@
       "Rock beats Scissors\n",
       "Scissors beats Paper\n",
       "Paper beats Rock\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "Select one of the following: \n",
+      "[Rules]\n",
+      "[Play]\n",
+      "[Leaderboard]\n",
+      "[Quit]\n",
+      "asdf\n",
+      "huh... lets try this again\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "Select one of the following: \n",
+      "[Rules]\n",
+      "[Play]\n",
+      "[Leaderboard]\n",
+      "[Quit]\n",
+      "play\n",
+      "The score is Chris 0 : Computer 0 \n",
+      "Choose either rock, paper, scissors or cancel[c] to return to the main menu: rock\n",
+      "rock..\n",
+      "paper..\n",
+      "scissors..\n",
+      "SHOOT!\n",
+      "Computer plays scissors\n",
+      "You Win!\n",
+      "The score is Chris 1 : Computer 0 \n",
+      "Choose either rock, paper, scissors or cancel[c] to return to the main menu: asdf\n",
+      "huh... lets try this again\n",
+      "Choose either rock, paper, scissors or cancel[c] to return to the main menu: c\n",
+      "Hope you enjoyed playing!\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "Select one of the following: \n",
+      "[Rules]\n",
+      "[Play]\n",
+      "[Leaderboard]\n",
+      "[Quit]\n",
+      "quit\n",
+      "Bye Chris!\n",
+      "What is your name? or 'exit': Vincent\n",
+      "Welcome Vincent to Rock, Paper, Scissors Python Edition\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "Select one of the following: \n",
+      "[Rules]\n",
+      "[Play]\n",
+      "[Leaderboard]\n",
+      "[Quit]\n",
+      "play\n",
+      "The score is Vincent 0 : Computer 0 \n",
+      "Choose either rock, paper, scissors or cancel[c] to return to the main menu: rock\n",
+      "rock..\n",
+      "paper..\n",
+      "scissors..\n",
+      "SHOOT!\n",
+      "Computer plays paper\n",
+      "You lose\n",
+      "The score is Vincent 0 : Computer 1 \n",
+      "Choose either rock, paper, scissors or cancel[c] to return to the main menu: paper\n",
+      "rock..\n",
+      "paper..\n",
+      "scissors..\n",
+      "SHOOT!\n",
+      "Computer plays rock\n",
+      "You Win!\n",
+      "The score is Vincent 1 : Computer 1 \n",
+      "Choose either rock, paper, scissors or cancel[c] to return to the main menu: scissors\n",
+      "rock..\n",
+      "paper..\n",
+      "scissors..\n",
+      "SHOOT!\n",
+      "Computer plays rock\n",
+      "You lose\n",
+      "The score is Vincent 1 : Computer 2 \n",
+      "Choose either rock, paper, scissors or cancel[c] to return to the main menu: c\n",
+      "Hope you enjoyed playing!\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
       "Select one of the following: \n",
       "[Rules]\n",
       "[Play]\n",
       "[Leaderboard]\n",
       "[Quit]\n",
       "leaderboard\n",
-      "Leaderboard:\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'vincentt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/sx/cp9j2vnd3n93l_cw05f7vlc40000gn/T/ipykernel_73625/3217493770.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mchris_vincent_week_2_project\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mrps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/coding_temple/classes/group_projects/week_2_project/chris_vincent_week_2_project.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 84\u001b[0;31m \u001b[0mrps\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     85\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/coding_temple/classes/group_projects/week_2_project/chris_vincent_week_2_project.py\u001b[0m in \u001b[0;36mrps\u001b[0;34m()\u001b[0m\n\u001b[1;32m     33\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Leaderboard:\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m                 \u001b[0;32mfor\u001b[0m \u001b[0mleader\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mleader_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 35\u001b[0;31m                     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mplayer_score_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mleader\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mleader\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mplayer_score_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mleader\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Computer\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     36\u001b[0m                         \u001b[0mplayer_winrate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mplayer_score_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mleader\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mleader\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mplayer_score_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mleader\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mleader\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mplayer_score_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mleader\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Computer\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m                         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"{leader} : {int(player_winrate)} %\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'vincentt'"
+      "===========\n",
+      "Leaderboard:\n",
+      "Chris : 100 %\n",
+      "===========\n",
+      "Vincent : 33 %\n",
+      "===========\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "Select one of the following: \n",
+      "[Rules]\n",
+      "[Play]\n",
+      "[Leaderboard]\n",
+      "[Quit]\n",
+      "quit\n",
+      "Bye Vincent!\n",
+      "What is your name? or 'exit': Chris\n",
+      "Welcome back Chris to Rock, Paper, Scissors Python Edition\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "Select one of the following: \n",
+      "[Rules]\n",
+      "[Play]\n",
+      "[Leaderboard]\n",
+      "[Quit]\n",
+      "leaderboard\n",
+      "===========\n",
+      "Leaderboard:\n",
+      "Chris : 100 %\n",
+      "===========\n",
+      "Vincent : 33 %\n",
+      "===========\n",
+      "~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+      "Select one of the following: \n",
+      "[Rules]\n",
+      "[Play]\n",
+      "[Leaderboard]\n",
+      "[Quit]\n",
+      "quit\n",
+      "Bye Chris!\n",
+      "What is your name? or 'exit': exit\n"
      ]
     }
    ],
    "source": [
-    "import chris_vincent_week_2_project \n",
+    "import chris_vincent_week_2_project as cv\n",
     "\n",
-    "rps()"
+    "cv.rps()\n"
    ]
   },
   {
